# prak-cmc-sem01

./: 01-03.c  01-04.c  01-05.c  01-08.c  CMakeLists.txt
contest01-cycles/: 01-01.c  01-02.c  01-06.c  01-07.c  01-09.c  01-10.c  01-11.c  01-12.c  01-13.c  01-14.c  01-15.c  01-16.c  01-17.c  01-18.c  01-19.c  01-20.c  01-21.c  01-22.c
contest02-arrays/: 02-01.c  02-02.c  02-03.c  02-04.c  02-05.c  02-06.c  02-07.c  02-08.c  02-09.c  02-10.c  02-11.c  02-12.c  02-13.c  02-14.c  02-15.c  02-16.c
contest03-functions/: 03-01.c  03-02.c  03-03.c  03-04.c  03-05.c  03-09.c  03-10.c  03-12.c  03-15.c  03-20.c
contest04-strings/: 04-02.c  04-04.c  04-07.c  04-08.c  04-10.c  04-14.c  04-17-booth.c  04-17-dumb.c  04-17-genius.c  04-17-quicksort.c  04-17.c
contest05-multidim/: 05-01.c  05-05.c  05-08.c  05-10.c  05-11.c  05-13.c  05-16-ira.c  05-16.c  vector.txt
contest06-files/: 06-03-ira.c  06-05.c  06-09.c  06-10.c  06-12.c  06-13-ira.c  06-14-tanya.c  06-14.c  06-15.c  06-17-alena_re10.c  06-17.c  gen06-10.py  gleb-06-10.c  smart-06-10.c
exam-prep/: 2decls.c  alignment.c  avl-ira.c  avl.c  avl_perm.cpp  bintree-08.c  bintree-arr-08.c  fib1-ira1.c  garland-elk.c  layer3.c
kr1/: kr1-01.c  kr1-02.c  kr1-03.c
stuff/: sizeof_test.c
