cmake_minimum_required(VERSION 3.14)
project(prak-cmc-sem01)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-O2 -lm -Wall -Werror -Wformat-security -Wignored-qualifiers -Winit-self -Wswitch-default -Wfloat-equal -Wpointer-arith -Wtype-limits -Wempty-body -Wno-logical-op -Wstrict-prototypes -Wold-style-declaration -Wold-style-definition -Wmissing-parameter-type -Wmissing-field-initializers -Wnested-externs -Wno-pointer-sign -std=gnu99")


add_executable(01-01 contest01-cycles/01-01.c)
add_executable(01-02 contest01-cycles/01-02.c)
add_executable(01-03 contest01-cycles/01-03.c)
add_executable(01-04 contest01-cycles/01-04.c)
add_executable(01-05 contest01-cycles/01-05.c)
add_executable(01-06 contest01-cycles/01-06.c)
add_executable(01-07 contest01-cycles/01-07.c)
add_executable(01-08 contest01-cycles/01-08.c)
add_executable(01-09 contest01-cycles/01-09.c)
add_executable(01-10 contest01-cycles/01-10.c)
add_executable(01-11 contest01-cycles/01-11.c)
add_executable(01-12 contest01-cycles/01-12.c)
add_executable(01-13 contest01-cycles/01-13.c)
add_executable(01-14 contest01-cycles/01-14.c)
add_executable(01-15 contest01-cycles/01-15.c)
add_executable(01-16 contest01-cycles/01-16.c)
add_executable(01-17 contest01-cycles/01-17.c)
add_executable(01-18 contest01-cycles/01-18.c)
add_executable(01-19 contest01-cycles/01-19.c)
add_executable(01-20 contest01-cycles/01-20.c)
add_executable(01-21 contest01-cycles/01-21.c)
add_executable(01-22 contest01-cycles/01-22.c)
add_executable(02-01 contest02-arrays/02-01.c)
add_executable(02-04 contest02-arrays/02-04.c)
add_executable(02-06 contest02-arrays/02-06.c)
add_executable(02-08 contest02-arrays/02-08.c)
add_executable(02-10 contest02-arrays/02-10.c)
add_executable(02-11 contest02-arrays/02-11.c)
add_executable(02-14 contest02-arrays/02-14.c)