cmake_minimum_required(VERSION 3.14)
project(prak-cmc-sem01)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-Wall -Werror -Wformat-security -Wignored-qualifiers -Winit-self -Wswitch-default -Wfloat-equal -Wpointer-arith -Wtype-limits -Wempty-body -Wno-logical-op -Wstrict-prototypes -Wold-style-declaration -Wold-style-definition -Wmissing-parameter-type -Wmissing-field-initializers -Wnested-externs -Wno-pointer-sign -std=gnu99 -DONPC -Wshift-overflow=2 -fsanitize=address -fsanitize=undefined -Wmaybe-uninitialized")
link_libraries(m)


add_executable(01-01 contest01-cycles/01-01.c)
add_executable(01-02 contest01-cycles/01-02.c)
add_executable(01-03 contest01-cycles/01-03.c)
add_executable(01-04 contest01-cycles/01-04.c)
add_executable(01-05 contest01-cycles/01-05.c)
add_executable(01-06 contest01-cycles/01-06.c)
add_executable(01-07 contest01-cycles/01-07.c)
add_executable(01-08 contest01-cycles/01-08.c)
add_executable(01-09 contest01-cycles/01-09.c)
add_executable(01-10 contest01-cycles/01-10.c)
add_executable(01-11 contest01-cycles/01-11.c)
add_executable(01-12 contest01-cycles/01-12.c)
add_executable(01-13 contest01-cycles/01-13.c)
add_executable(01-14 contest01-cycles/01-14.c)
add_executable(01-15 contest01-cycles/01-15.c)
add_executable(01-16 contest01-cycles/01-16.c)
add_executable(01-17 contest01-cycles/01-17.c)
add_executable(01-18 contest01-cycles/01-18.c)
add_executable(01-19 contest01-cycles/01-19.c)
add_executable(01-20 contest01-cycles/01-20.c)
add_executable(01-21 contest01-cycles/01-21.c)
add_executable(01-22 contest01-cycles/01-22.c)
add_executable(02-01 contest02-arrays/02-01.c)
add_executable(02-04 contest02-arrays/02-04.c)
add_executable(02-06 contest02-arrays/02-06.c)
add_executable(02-08 contest02-arrays/02-08.c)
add_executable(02-10 contest02-arrays/02-10.c)
add_executable(02-11 contest02-arrays/02-11.c)
add_executable(02-14 contest02-arrays/02-14.c)
add_executable(02-02 contest02-arrays/02-02.c)
add_executable(02-03 contest02-arrays/02-03.c)
add_executable(02-05 contest02-arrays/02-05.c)
add_executable(02-07 contest02-arrays/02-07.c)
add_executable(03-01 contest03-functions/03-01.c)
add_executable(03-03 contest03-functions/03-03.c)
add_executable(03-09 contest03-functions/03-09.c)
add_executable(03-10 contest03-functions/03-10.c)
add_executable(03-12 contest03-functions/03-12.c)
add_executable(03-15 contest03-functions/03-15.c)
add_executable(03-20 contest03-functions/03-20.c)
add_executable(02-09 contest02-arrays/02-09.c)
add_executable(02-12 contest02-arrays/02-12.c)
add_executable(02-13 contest02-arrays/02-13.c)
add_executable(02-15 contest02-arrays/02-15.c)
add_executable(02-16 contest02-arrays/02-16.c)
add_executable(03-02 contest03-functions/03-02.c)
add_executable(03-04 contest03-functions/03-04.c)
add_executable(03-05 contest03-functions/03-05.c)
add_executable(04-02 contest04-strings/04-02.c)
add_executable(04-04 contest04-strings/04-04.c)
add_executable(04-07 contest04-strings/04-07.c)
add_executable(04-08 contest04-strings/04-08.c)
add_executable(04-10 contest04-strings/04-10.c)
add_executable(04-14 contest04-strings/04-14.c)
add_executable(04-17 contest04-strings/04-17.c)
add_executable(04-17-quicksort contest04-strings/04-17-quicksort.c)
add_executable(04-17-genius contest04-strings/04-17-genius.c)
add_executable(04-17-dumb contest04-strings/04-17-dumb.c)
add_executable(04-17-booth contest04-strings/04-17-booth.c)
add_executable(kr1-01 kr1/kr1-01.c)
add_executable(kr1-02 kr1/kr1-02.c)
add_executable(kr1-03 kr1/kr1-03.c)
add_executable(05-01 contest05-multidim/05-01.c)
add_executable(05-05 contest05-multidim/05-05.c)
add_executable(05-08 contest05-multidim/05-08.c)
add_executable(05-10 contest05-multidim/05-10.c)
add_executable(05-11 contest05-multidim/05-11.c)
add_executable(05-13 contest05-multidim/05-13.c)
add_executable(sizeof_test stuff/sizeof_test.c)

add_executable(05-16 contest05-multidim/05-16.c)
add_executable(06-05 contest06-files/06-05.c)
add_executable(06-09 contest06-files/06-09.c)
add_executable(06-10 contest06-files/06-10.c)
add_executable(06-12 contest06-files/06-12.c)
add_executable(06-14 contest06-files/06-14.c)
add_executable(06-15 contest06-files/06-15.c)